--- a/code/closed_cmr/zo4541_closed_cmr_2022.Rmd
+++ b/code/closed_cmr/zo4541_closed_cmr_2022.Rmd
@@ -15,6 +15,12 @@ output:
     df_print: paged
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, 
+                      message = FALSE, 
+                      warning = FALSE)
+```
+
 ```{r, include = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
 ```
@@ -23,17 +29,33 @@ library(tidyverse)
 
 Important highlights of closed CMR models:
 
-* The aim is to estimate population size.
+* The aim of closed CMR models is to estimate population size. One of the most fundamental pieces of information for conservation.
 
-* The number of animals that were caught _is_ known.
+* Because we always know how many animals we caught, the objective to estimate the number of animals we did not catch.
 
-* The objective is therefore to estimate the number of animals not caught (called `f0` in `MARK`).
+* The number of animals caught is an estimated parameter (where a parameter is an unknown value estimated from the observation we have), and in `MARK` this parameter is referred to as `f0`.
+
+* To estimate `f0`, we need to estimate capture probability (i.e., we assume _imperfect_ detection).
+
+* Estimating capture probabilities is how we figure out how many animals were not caught.
+
+For example, assume 3 days of trapping, where the capture probability is a constant 50% (i.e., it's a coin flip if we capture an animal or not). The cumulative probability to capture an animal on all three days (and have an observed capture history of 111) is therefore $Pr(CH_{111}) = p \times p \times p = 0.5 \times 0.5 \times 0.5 = 0.125 = 12.5\%$ (So with a capture probability of 0.5, we have a 12.5% chance to capture an animal on all 3 days). Conversley, the probability to never capture an animal is $Pr(CH_{000}) = (1-p) \times (1-p) \times (1-p) = (1-0.5) \times (1-0.5) \times (1-0.5) = 0.5 \times 0.5 \times 0.5 = 0.125 = 12.5\%$
+
+Alternative, assume 3 days of trapping where capture probabilities vary over time ($p_1 = 0.1$, $p_2 = 0.4$, $p_3 = 0.8$). The probability to capture an animal on all 3 days is therefore $Pr(CH_{111}) = p_1 \times p_2 \times p_3 = 0.1 \times 0.4 \times 0.8 = 0.03 = 3\%$.  Conversley, the probability to never capture an animal is $Pr(CH_{000}) = (1-p_1) \times (1-p_2) \times (1-p_3) = (1-0.1) \times (1-0.4) \times (1-0.8) = 0.9 \times 0.6 \times 0.2 = 0.11 = 11\%$. In this example, we're very unlikely to capture an animal on all 3 days of trapping, but we are comparatively more likely to _never_ captured an animal on all 3 days.
+
+`MARK` uses this information to estimate `f0` (see lecture slides for more details on how this happens).
 
 # Details of the data collection
 
-In 1965 an island wide capture-mark-recapture trapping session occurred across Amami island in a selection of sites known to have Amami rabbits present.
+In 1965 a capture-mark-recapture trapping session, lasting three days, occurred across Amami island in a selection of sites known to have Amami rabbits present. Traps were baited with potato and carrots and were checked once every 24 hours. Researchers did not record any additional information.
+
+This data collection process was replicated in 1983, and again in 2022. However, in 2022 researchers noted the age of the rabbit, determined by weight (including one year olds, two year olds, and adults [>= 3 years old]).
 
 # 1965
+
+There are 674 rabbits in 1965. Note that there were no rabbits on the island, so this can act as a "control" or reference abundance the students may want to use as a conservation objective. Don't outright tell them this, but nudge them in this direction.
+
+Capture probabilities vary over time (model $M_t$): 17% on day 1; 34% on day 2; and 48% on day 3.
 
 ```{r}
 # Set seed so that the random numbers are the same each time you run the script
@@ -112,6 +134,11 @@ ggplot(cap1965) +
 
 # 1983
 
+There are 421 rabbits in 1983. Note that the mongoose were introduced in the late 1970s, so the reduction here is meant to reflect the mongoose impact after a handful of years.
+
+Capture probabilities vary over time (model $M_t$) but there is also a behavioural effect (model $M_b$) where previously captured rabbits are more likely to be recaptured. Capture probabilities are 7% on day 1; 24% on day 2; and 38% on day 3, with recapture probabilities of 64% on day 2, and 87% on day 3.
+
+
 ```{r}
 # Set seed so that the random numbers are the same each time you run the script
 set.seed(666)
@@ -134,9 +161,15 @@ cap <- matrix(nrow = N, ncol = t, data = NA)
 # see how many rabbits are actually captured on each day
 # Based on binomial distribution with probability p[day], do this for all rabbits (N) where there is only a single day to capture (1)
 cap[,1] <- rbinom(N, 1, p[1])
+
+# For day 2, use a for loop to go through each individual (i)
+# If rabbit [i] had not been caught on day 1 (cap[i,1] == 0)
+  # Then it uses the capture prob for day 2 p[2]
+  # But if it was caught, then use recapture prob for day 2 (pr[1])
 for(i in 1:nrow(cap)){
   cap[i,2] <- ifelse(cap[i,1] == 0, rbinom(N, 1, p[2]), rbinom(N, 1, pr[1]))
 }
+# Repeat above loop but for last day
 for(i in 1:nrow(cap)){
   cap[i,3] <- ifelse(cap[i,1] == 0 & cap[i,2] == 0, rbinom(N, 1, p[3]), rbinom(N, 1, pr[2]))
 }
@@ -194,9 +227,13 @@ ggplot(cap1983) +
   theme_minimal()
 ```
 
-# 2021 juveniles
+# 2022 
 
-Total 2021 population size = 80 juvenile, 60 subadult and 100 adults
+## One year olds
+
+There are 83 one year old rabbits in 2022.
+
+Capture probabilities are constant at 36% but there is a recapture effect. Recapture rates vary over time from 42% on day 2 to 54% on day 3.
 
 ```{r}
 # Set seed so that the random numbers are the same each time you run the script
@@ -220,6 +257,10 @@ cap <- matrix(nrow = N, ncol = t, data = NA)
 # see how many rabbits are actually captured on each day
 # Based on binomial distribution with probability p[day], do this for all rabbits (N) where there is only a single day to capture (1)
 cap[,1] <- rbinom(N, 1, p[1])
+# For day 2, use a for loop to go through each individual (i)
+# If rabbit [i] had not been caught on day 1 (cap[i,1] == 0)
+  # Then it uses the capture prob for day 2 p[2]
+  # But if it was caught, then use recapture prob for day 2 (pr[1])
 for(i in 1:nrow(cap)){
   cap[i,2] <- ifelse(cap[i,1] == 0, rbinom(N, 1, p[2]), rbinom(N, 1, pr[1]))
 }
@@ -228,61 +269,63 @@ for(i in 1:nrow(cap)){
 }
 
 # Combine and store it in a dataframe
-cap2021_juv <- data.frame(
+cap2022_juv <- data.frame(
   CH = paste(cap[,1], cap[,2], cap[,3])
 )
 
 # Turn it into a frequency table
-cap2021_juv <- cap2021_juv %>% 
+cap2022_juv <- cap2022_juv %>% 
   count(CH, sort = T)
 
 # Remove rabbits never caught (this is what students are trying to estimate)
-cap2021_juv <- cap2021_juv[cap2021_juv$CH != "0 0 0",]
+cap2022_juv <- cap2022_juv[cap2022_juv$CH != "0 0 0",]
 
 # Adding comments for students
 
-cap2021_juv$comment <- NA
+cap2022_juv$comment <- NA
 
-for(i in 1:nrow(cap2021_juv)){
-  if(cap2021_juv$CH[i] == "1 1 1"){
-    cap2021_juv$comment[i] <- "/* Number of rabbits caught on day 1, 2, 3 */"
-  } else if(cap2021_juv$CH[i] == "1 1 0") {
-    cap2021_juv$comment[i] <- "/* Number of rabbits caught on day 1, 2 */"
-  } else if(cap2021_juv$CH[i] == "0 1 1") {
-    cap2021_juv$comment[i] <- "/* Number of rabbits caught on day 2, 3 */"
-  } else if(cap2021_juv$CH[i] == "1 0 1") {
-    cap2021_juv$comment[i] <- "/* Number of rabbits caught on day 1, 3 */"
-  } else if(cap2021_juv$CH[i] == "1 0 0") {
-    cap2021_juv$comment[i] <- "/* Number of rabbits caught on day 1 */"
-  } else if(cap2021_juv$CH[i] == "0 1 0") {
-    cap2021_juv$comment[i] <- "/* Number of rabbits caught on day 2 */"
-  } else if(cap2021_juv$CH[i] == "0 0 1") {
-    cap2021_juv$comment[i] <- "/* Number of rabbits caught on day 3 */"
+for(i in 1:nrow(cap2022_juv)){
+  if(cap2022_juv$CH[i] == "1 1 1"){
+    cap2022_juv$comment[i] <- "/* Number of rabbits caught on day 1, 2, 3 */"
+  } else if(cap2022_juv$CH[i] == "1 1 0") {
+    cap2022_juv$comment[i] <- "/* Number of rabbits caught on day 1, 2 */"
+  } else if(cap2022_juv$CH[i] == "0 1 1") {
+    cap2022_juv$comment[i] <- "/* Number of rabbits caught on day 2, 3 */"
+  } else if(cap2022_juv$CH[i] == "1 0 1") {
+    cap2022_juv$comment[i] <- "/* Number of rabbits caught on day 1, 3 */"
+  } else if(cap2022_juv$CH[i] == "1 0 0") {
+    cap2022_juv$comment[i] <- "/* Number of rabbits caught on day 1 */"
+  } else if(cap2022_juv$CH[i] == "0 1 0") {
+    cap2022_juv$comment[i] <- "/* Number of rabbits caught on day 2 */"
+  } else if(cap2022_juv$CH[i] == "0 0 1") {
+    cap2022_juv$comment[i] <- "/* Number of rabbits caught on day 3 */"
   }
 }
 
 # Final data looks like:
-cap2021_juv[,c(3, 1, 2)]
+cap2022_juv[,c(3, 1, 2)]
 ```
 
 ```{r}
 library(ggplot2)
 
-ggplot(cap2021_juv) +
+ggplot(cap2022_juv) +
   geom_col(aes(x = reorder(CH, -n), y = n)) +
   labs(x = "Capture history (day1 | day2 | day3)",
        y = "Number of unique juvenile rabbits caught",
-       title = "Juvenile Amami rabbit capture histories in 2021",
-       caption = paste("Total number of rabbits caught =", sum(as.numeric(cap2021_juv$n)), "\n",
+       title = "Juvenile Amami rabbit capture histories in 2022",
+       caption = paste("Total number of rabbits caught =", sum(as.numeric(cap2022_juv$n)), "\n",
                        "Total number of rabbits =", N, "\n",
-                       "f0 =", N - sum(as.numeric(cap2021_juv$n)))) +
+                       "f0 =", N - sum(as.numeric(cap2022_juv$n)))) +
   theme_bw() +
   theme_minimal()
 ```
 
-# 2021 subadults
+## Two year olds
 
-Total 2021 population size = 80 juvenile, 60 subadult and 100 adults
+There are 59 two year old rabbits in 2022.
+
+Capture probabilities vary over time (46%, 23% and 13%) in addition to a recapture effect. Recapture rates vary over time from 39% on day 2 to 48% on day 3.
 
 ```{r}
 # Set seed so that the random numbers are the same each time you run the script
@@ -306,6 +349,10 @@ cap <- matrix(nrow = N, ncol = t, data = NA)
 # see how many rabbits are actually captured on each day
 # Based on binomial distribution with probability p[day], do this for all rabbits (N) where there is only a single day to capture (1)
 cap[,1] <- rbinom(N, 1, p[1])
+# For day 2, use a for loop to go through each individual (i)
+# If rabbit [i] had not been caught on day 1 (cap[i,1] == 0)
+  # Then it uses the capture prob for day 2 p[2]
+  # But if it was caught, then use recapture prob for day 2 (pr[1])
 for(i in 1:nrow(cap)){
   cap[i,2] <- ifelse(cap[i,1] == 0, rbinom(N, 1, p[2]), rbinom(N, 1, pr[1]))
 }
@@ -314,61 +361,63 @@ for(i in 1:nrow(cap)){
 }
 
 # Combine and store it in a dataframe
-cap2021_suba <- data.frame(
+cap2022_suba <- data.frame(
   CH = paste(cap[,1], cap[,2], cap[,3])
 )
 
 # Turn it into a frequency table
-cap2021_suba <- cap2021_suba %>% 
+cap2022_suba <- cap2022_suba %>% 
   count(CH, sort = T)
 
 # Remove rabbits never caught (this is what students are trying to estimate)
-cap2021_suba <- cap2021_suba[cap2021_suba$CH != "0 0 0",]
+cap2022_suba <- cap2022_suba[cap2022_suba$CH != "0 0 0",]
 
 # Adding comments for students
 
-cap2021_suba$comment <- NA
+cap2022_suba$comment <- NA
 
-for(i in 1:nrow(cap2021_juv)){
-  if(cap2021_suba$CH[i] == "1 1 1"){
-    cap2021_suba$comment[i] <- "/* Number of rabbits caught on day 1, 2, 3 */"
-  } else if(cap2021_suba$CH[i] == "1 1 0") {
-    cap2021_suba$comment[i] <- "/* Number of rabbits caught on day 1, 2 */"
-  } else if(cap2021_suba$CH[i] == "0 1 1") {
-    cap2021_suba$comment[i] <- "/* Number of rabbits caught on day 2, 3 */"
-  } else if(cap2021_suba$CH[i] == "1 0 1") {
-    cap2021_suba$comment[i] <- "/* Number of rabbits caught on day 1, 3 */"
-  } else if(cap2021_suba$CH[i] == "1 0 0") {
-    cap2021_suba$comment[i] <- "/* Number of rabbits caught on day 1 */"
-  } else if(cap2021_suba$CH[i] == "0 1 0") {
-    cap2021_suba$comment[i] <- "/* Number of rabbits caught on day 2 */"
-  } else if(cap2021_suba$CH[i] == "0 0 1") {
-    cap2021_suba$comment[i] <- "/* Number of rabbits caught on day 3 */"
+for(i in 1:nrow(cap2022_juv)){
+  if(cap2022_suba$CH[i] == "1 1 1"){
+    cap2022_suba$comment[i] <- "/* Number of rabbits caught on day 1, 2, 3 */"
+  } else if(cap2022_suba$CH[i] == "1 1 0") {
+    cap2022_suba$comment[i] <- "/* Number of rabbits caught on day 1, 2 */"
+  } else if(cap2022_suba$CH[i] == "0 1 1") {
+    cap2022_suba$comment[i] <- "/* Number of rabbits caught on day 2, 3 */"
+  } else if(cap2022_suba$CH[i] == "1 0 1") {
+    cap2022_suba$comment[i] <- "/* Number of rabbits caught on day 1, 3 */"
+  } else if(cap2022_suba$CH[i] == "1 0 0") {
+    cap2022_suba$comment[i] <- "/* Number of rabbits caught on day 1 */"
+  } else if(cap2022_suba$CH[i] == "0 1 0") {
+    cap2022_suba$comment[i] <- "/* Number of rabbits caught on day 2 */"
+  } else if(cap2022_suba$CH[i] == "0 0 1") {
+    cap2022_suba$comment[i] <- "/* Number of rabbits caught on day 3 */"
   }
 }
 
 # Final data looks like:
-cap2021_suba[,c(3, 1, 2)]
+cap2022_suba[,c(3, 1, 2)]
 ```
 
 ```{r}
 library(ggplot2)
 
-ggplot(cap2021_suba) +
+ggplot(cap2022_suba) +
   geom_col(aes(x = reorder(CH, -n), y = n)) +
   labs(x = "Capture history (day1 | day2 | day3)",
        y = "Number of unique subadult rabbits caught",
-       title = "Subadult Amami rabbit capture histories in 2021",
-       caption = paste("Total number of rabbits caught =", sum(as.numeric(cap2021_suba$n)), "\n",
+       title = "Subadult Amami rabbit capture histories in 2022",
+       caption = paste("Total number of rabbits caught =", sum(as.numeric(cap2022_suba$n)), "\n",
                        "Total number of rabbits =", N, "\n",
-                       "f0 =", N - sum(as.numeric(cap2021_suba$n)))) +
+                       "f0 =", N - sum(as.numeric(cap2022_suba$n)))) +
   theme_bw() +
   theme_minimal()
 ```
 
-# 2021 subadults
+## Adults
 
-Total 2021 population size = 80 juvenile, 60 subadult and 100 adults
+There are 106 adult rabbits in 2022.
+
+Capture probabilities vary over time (26%, 38% and 43%) in addition to a recapture effect. Recapture rates are constant at 56%.
 
 ```{r}
 # Set seed so that the random numbers are the same each time you run the script
@@ -392,6 +441,10 @@ cap <- matrix(nrow = N, ncol = t, data = NA)
 # see how many rabbits are actually captured on each day
 # Based on binomial distribution with probability p[day], do this for all rabbits (N) where there is only a single day to capture (1)
 cap[,1] <- rbinom(N, 1, p[1])
+# For day 2, use a for loop to go through each individual (i)
+# If rabbit [i] had not been caught on day 1 (cap[i,1] == 0)
+  # Then it uses the capture prob for day 2 p[2]
+  # But if it was caught, then use recapture prob for day 2 (pr[1])
 for(i in 1:nrow(cap)){
   cap[i,2] <- ifelse(cap[i,1] == 0, rbinom(N, 1, p[2]), rbinom(N, 1, pr[1]))
 }
@@ -400,54 +453,54 @@ for(i in 1:nrow(cap)){
 }
 
 # Combine and store it in a dataframe
-cap2021_adult <- data.frame(
+cap2022_adult <- data.frame(
   CH = paste(cap[,1], cap[,2], cap[,3])
 )
 
 # Turn it into a frequency table
-cap2021_adult <- cap2021_adult %>% 
+cap2022_adult <- cap2022_adult %>% 
   count(CH, sort = T)
 
 # Remove rabbits never caught (this is what students are trying to estimate)
-cap2021_adult <- cap2021_adult[cap2021_adult$CH != "0 0 0",]
+cap2022_adult <- cap2022_adult[cap2022_adult$CH != "0 0 0",]
 
 # Adding comments for students
 
-cap2021_adult$comment <- NA
+cap2022_adult$comment <- NA
 
-for(i in 1:nrow(cap2021_juv)){
-  if(cap2021_adult$CH[i] == "1 1 1"){
-    cap2021_adult$comment[i] <- "/* Number of rabbits caught on day 1, 2, 3 */"
-  } else if(cap2021_adult$CH[i] == "1 1 0") {
-    cap2021_adult$comment[i] <- "/* Number of rabbits caught on day 1, 2 */"
-  } else if(cap2021_adult$CH[i] == "0 1 1") {
-    cap2021_adult$comment[i] <- "/* Number of rabbits caught on day 2, 3 */"
-  } else if(cap2021_adult$CH[i] == "1 0 1") {
-    cap2021_adult$comment[i] <- "/* Number of rabbits caught on day 1, 3 */"
-  } else if(cap2021_adult$CH[i] == "1 0 0") {
-    cap2021_adult$comment[i] <- "/* Number of rabbits caught on day 1 */"
-  } else if(cap2021_adult$CH[i] == "0 1 0") {
-    cap2021_adult$comment[i] <- "/* Number of rabbits caught on day 2 */"
-  } else if(cap2021_adult$CH[i] == "0 0 1") {
-    cap2021_adult$comment[i] <- "/* Number of rabbits caught on day 3 */"
+for(i in 1:nrow(cap2022_juv)){
+  if(cap2022_adult$CH[i] == "1 1 1"){
+    cap2022_adult$comment[i] <- "/* Number of rabbits caught on day 1, 2, 3 */"
+  } else if(cap2022_adult$CH[i] == "1 1 0") {
+    cap2022_adult$comment[i] <- "/* Number of rabbits caught on day 1, 2 */"
+  } else if(cap2022_adult$CH[i] == "0 1 1") {
+    cap2022_adult$comment[i] <- "/* Number of rabbits caught on day 2, 3 */"
+  } else if(cap2022_adult$CH[i] == "1 0 1") {
+    cap2022_adult$comment[i] <- "/* Number of rabbits caught on day 1, 3 */"
+  } else if(cap2022_adult$CH[i] == "1 0 0") {
+    cap2022_adult$comment[i] <- "/* Number of rabbits caught on day 1 */"
+  } else if(cap2022_adult$CH[i] == "0 1 0") {
+    cap2022_adult$comment[i] <- "/* Number of rabbits caught on day 2 */"
+  } else if(cap2022_adult$CH[i] == "0 0 1") {
+    cap2022_adult$comment[i] <- "/* Number of rabbits caught on day 3 */"
   }
 }
 
 # Final data looks like:
-cap2021_adult[,c(3, 1, 2)]
+cap2022_adult[,c(3, 1, 2)]
 ```
 
 ```{r}
 library(ggplot2)
 
-ggplot(cap2021_adult) +
+ggplot(cap2022_adult) +
   geom_col(aes(x = reorder(CH, -n), y = n)) +
   labs(x = "Capture history (day1 | day2 | day3)",
        y = "Number of unique adult rabbits caught",
-       title = "Adult Amami rabbit capture histories in 2021",
-       caption = paste("Total number of rabbits caught =", sum(as.numeric(cap2021_adult$n)), "\n",
+       title = "Adult Amami rabbit capture histories in 2022",
+       caption = paste("Total number of rabbits caught =", sum(as.numeric(cap2022_adult$n)), "\n",
                        "Total number of rabbits =", N, "\n",
-                       "f0 =", N - sum(as.numeric(cap2021_adult$n)))) +
+                       "f0 =", N - sum(as.numeric(cap2022_adult$n)))) +
   theme_bw() +
   theme_minimal()
 ```
